--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     </head>
     <body>
         <script src="" async defer></script>
+        <h1 style="text-align: center">Birthday Wishing App</h1>
         {%block body%}{%endblock%}
     </body>
 </html>
