--- a/templates/thankyoupage.html
+++ b/templates/thankyoupage.html
@@ -1,17 +1,13 @@
-{% extends "base.html" %} 
-{% block head%}
+{% extends "base.html" %} {% block head%}
 <title>Birthday Wishing App</title>
-{% endblock%} 
-{%block body%}
+{% endblock%} {%block body%}
 <div>
     {%if success == True%}
     <h2>User detail added!</h2>
     <a href="/">Add more user</a>
-    {%endif%}
-    
-    {%if success == False%}
-        <h2>Something went wrong ;( </h2>
-        <a href="/">Try Adding again.</a>
+    {%endif%} {%if success == False%}
+    <h2>Something went wrong ;(</h2>
+    <a href="/">Try Adding again.</a>
     {%endif%}
 </div>
 {%endblock%}
