--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,58 @@
-body {
+h1 {
+    text-align: center
+}
+form {
+  width: 60%;
+  margin:2%;
+  padding: 1% ;
+  background: #f4f7f8;
+  border-radius: 8px;
+  float:left;
+}
+h2 {
+  margin: 0 0 30px 0;
+  text-align: center;
+}
+input[type="text"],
+input[type="tel"],
+input[type="email"],
+input[type="date"]
+{
+  background: rgba(255,255,255,0.1);
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 3%;
+  width: 90%;
+  background-color: #e8eeef;
+  color: #000000;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+}
+input[type="submit"]{
+  padding: 19px 39px 18px 39px;
+  color: #FFF;
+  background-color: #4bc970;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border: 1px solid #3ac162;
+  border-width: 1px 1px 3px;
+  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+  margin-bottom: 10px;
+}
+.friend-list{
+    margin-top: 2%;
+    float: left;
+}
+/* body {
     margin: 100px;
     font-family: sans-serif;
 }
 .form {
     text-align: center;
-}
+} */
