--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,14 +3,14 @@ h1 {
 }
 form {
   width: 60%;
-  margin:2%;
+  margin: 0% 2%;
   padding: 1% ;
   background: #f4f7f8;
   border-radius: 8px;
   float:left;
 }
 h2 {
-  margin: 0 0 30px 0;
+  margin: 0;
   text-align: center;
 }
 input[type="text"],
@@ -20,11 +20,12 @@ input[type="date"]
 {
   background: rgba(255,255,255,0.1);
   border: none;
-  font-size: 16px;
+  border-radius: 3px;
+  font-size: 1rem;
   height: auto;
-  margin: 0;
+  margin: 0 4%;
   outline: 0;
-  padding: 3%;
+  padding: 1%;
   width: 90%;
   background-color: #e8eeef;
   color: #000000;
@@ -32,27 +33,46 @@ input[type="date"]
   margin-bottom: 30px;
 }
 input[type="submit"]{
-  padding: 19px 39px 18px 39px;
-  color: #FFF;
-  background-color: #4bc970;
-  font-size: 18px;
+  margin: 1% 35%;
+  padding: 2%;
+  box-shadow: 0 30px 60px -30px rgba(0, 0, 0, .5);
+  cursor: pointer;
+  color: #fff;
+  background-color: #3498db;
+  font-size: 1.2rem;
   text-align: center;
   font-style: normal;
-  border-radius: 5px;
-  width: 100%;
-  border: 1px solid #3ac162;
+  border-radius: 3px;
+  width: 30%;
+  border: 1px solid #3498db;
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
   margin-bottom: 10px;
+  transition:all 146ms ease;
 }
+input[type="submit"]:enabled:hover {
+            background-color: #2675aa;
+            border-color: #2675aa;
+        }
 .friend-list{
-    margin-top: 2%;
-    float: left;
+  width: 28%;
+  margin:0% 2%;
+  padding: 1% ;
+  background: #f4f7f8;
+  border-radius: 8px;
+  float:left;
 }
-/* body {
-    margin: 100px;
-    font-family: sans-serif;
+.form-field {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 0;
+    padding: 0.1%;
 }
-.form {
-    text-align: center;
-} */
+.form-field label{
+    font-size: 1.2rem;
+    padding: 1%;
+    align-self: center;
+    flex-shrink: 0;
+    flex-basis: 100%;
+    width: 100%;
+}
