--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <h2>Enter Details</h2>
     <div class="form-field">
         <label for="Name">Name:</label>
-        <input type="text" id="name" name="name" />
+        <input type="text" id="name" name="name" placeholder="Jane Doe"/>
     </div>
     <div class="form-field">
         <label for="phone">Phone number:</label>
@@ -14,7 +14,7 @@
             type="tel"
             id="phone"
             name="phone"
-            placeholder="xxxxnnnnnn"
+            placeholder="XXXXXXXXXX"
             required/>
     </div>
     <div class="form-field">
@@ -31,7 +31,7 @@
         <input type="date" id="dob" name="dob" placeholder="01-01-2000" />
     </div>
     <div class="form-field">
-        <label for="custom-message"> Custom Message </label>
+        <label for="custom-message"> Custom Message: </label>
         <input
             type="text"
             name="message"
@@ -44,10 +44,13 @@
     </div>
 </form>
 <div class="friend-list">
-    <h3>Friend List</h3>
+    <h2>Friend List</h2>
     <ul>
         {%for user in users %}
-        <li>{{user.name}} {{user.email}} {{user.phone}} {{user.dob}}</li>
+        <details>
+            <summary>{{user.name}}</summary>
+            <p>{{user.email}} {{user.phone}} {{user.dob}}</p>
+        </details>
         {% endfor%}
     </ul>
 </div>
