--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title></title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            rel="stylesheet"
-            href="{{ url_for('static',filename='css/main.css') }}"
-        />
         {% block head%}{% endblock%}
     </head>
     <body>
