--- a/templates/index.html
+++ b/templates/index.html
@@ -1,57 +1,42 @@
 {% extends "base.html" %} {% block head%}
 <title>Birthday Wishing App</title>
+<link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}" />
 {% endblock%} {%block body%}
-<h1>Birthday Wishing App</h1>
-<form action="/" method="POST" id="form1">
-    <h2>Enter Details</h2>
-    <div class="form-field">
-        <label for="Name">Name:</label>
-        <input type="text" id="name" name="name" placeholder="Jane Doe"/>
+<div class="box-form">
+    <div class="left">
+        <div class="overlay">
+            <h1>Enter details:</h1>
+            <form action="/" method="POST" id="form1">
+                <div class="inputs">
+                    <input type="text" placeholder="Jane Doe" name="name">
+                    <br>
+                    <input type="date" name="dob" required>
+                    <br>
+                    <input type="tel" placeholder="Mobile number" name="phone" required>
+                    <br>
+                    <input type="email" placeholder="Email" name="email" required>
+                    <br>
+                    <input type="text" placeholder="Custom message" name="message">
+                </div>
+            </form>
+            <br>
+            <button type="submit" form="form1" value="submit">Add</button>
+        </div>
     </div>
-    <div class="form-field">
-        <label for="phone">Phone number:</label>
-        <input
-            type="tel"
-            id="phone"
-            name="phone"
-            placeholder="XXXXXXXXXX"
-            required/>
+    <div class="right">
+        <h1>Friend list</h1>
+        <br>
+        <ul>
+            {%for user in users %}
+            <details>
+                <summary>{{user.name}}</summary>
+                <p>{{user.email}} {{user.phone}} {{user.dob}}</p>
+            </details>
+            {% endfor%}
+        </ul>
+        <br>
+        <button type="submit" form="form1" value="delete">Delete</button>
+        <button type="submit" form="form1" value="update">Update</button>
     </div>
-    <div class="form-field">
-        <label for="E-mail">E-mail:</label>
-        <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="abcd@xyz.com"
-            required/>
-    </div>
-    <div class="form-field">
-        <label for="dob">DOB:</label>
-        <input type="date" id="dob" name="dob" placeholder="01-01-2000" />
-    </div>
-    <div class="form-field">
-        <label for="custom-message"> Custom Message: </label>
-        <input
-            type="text"
-            name="message"
-            id="message"
-            placeholder="Happy birthday!"
-            maxlength="50"/>
-    </div>
-    <div class="form-button">
-        <input class="button" type="submit" />
-    </div>
-</form>
-<div class="friend-list">
-    <h2>Friend List</h2>
-    <ul>
-        {%for user in users %}
-        <details>
-            <summary>{{user.name}}</summary>
-            <p>{{user.email}} {{user.phone}} {{user.dob}}</p>
-        </details>
-        {% endfor%}
-    </ul>
 </div>
 {%endblock%}
