--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <h1>Enter details:</h1>
             <form action="/" method="POST" id="form1">
                 <div class="inputs">
-                    <input type="text" placeholder="Jane Doe" name="name">
+                    <input type="text" placeholder="Name" name="name">
                     <br>
                     <input type="date" name="dob" required>
                     <br>
