submit button working

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,9 @@
                     <br>
                     <input type="text" placeholder="Custom message" name="message">
                 </div>
-            </form>
             <br>
-            <button type="submit" form="form1" value="submit">Add</button>
+            <input class="button" type="submit" value="Add">
+            </form>
         </div>
     </div>
     <div class="right">
