--- a/static/css/main.css
+++ b/static/css/main.css
@@ -67,6 +67,10 @@ body {
   border-radius: 3px ;
   outline: none;
 }
+.box-form .left input[type="submit"]{
+  width: 15%;
+  border-radius: 50px ;
+}
 
 .box-form .right {
   padding: 40px;
@@ -79,7 +83,7 @@ body {
   }
 }
 
-button {
+button, .button {
   color: #fff;
   font-size: 16px;
   padding: 12px 35px;
