--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&display=swap');
+*{
+  font-family: 'Dongle', sans-serif;
+  font-size: 30px;
+}
+
 body {
-  background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
+  /* background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%); */
+  background-image: url(https://previews.123rf.com/images/saenal78/saenal781503/saenal78150300020/37268712-hand-drawn-seamless-pattern-with-birthday-elements-vector-illustration.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -7,7 +14,7 @@ body {
   color: #333333;
 }
 .box-form {
-  margin: 5% auto;
+  margin:2% auto;
   width: 80%;
   background: #FFFFFF;
   border-radius: 10px;
@@ -16,7 +23,7 @@ body {
   flex: 1 1 100%;
   align-items: stretch;
   justify-content: space-between;
-  box-shadow: 0 0 20px 6px #090b6f85;
+  box-shadow: 0 0 20px 6px rgba(78, 36, 16, 0.719);
 }
 @media (max-width: 980px) {
   .box-form {
@@ -33,24 +40,24 @@ body {
   color: #FFFFFF;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  /* background-image: url(https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80); */
+  background-image: linear-gradient(135deg, #ffeab2 10%, #da880f 100%);
   overflow: hidden;
-  width: 70%;
   text-align: center;
 }
 .box-form .left .overlay {
   padding: 2%;
   width: 100%;
   height: 100%;
-  background: #5961f9ad;
+  background: #be732bad;
   overflow: hidden;
   box-sizing: border-box;
 }
 .box-form .left .overlay h1 {
   text-align:center;
-  font-size: 6vmax;
+  font-size: 7vmax;
   line-height: 1;
-  font-weight: 400;
+  font-weight: 500;
   padding: 0% 25px;
   margin: 40px 100px 20px;
   white-space: nowrap;
@@ -62,20 +69,23 @@ body {
   width: 100%;
   padding: 1.5% 0%;
   margin-top: 25px;
-  font-size: 16px;
   border: none;
   border-radius: 3px ;
   outline: none;
+  background-color: rgba(255,252,246,255);
+  color: #753d09;
 }
 .box-form .left input[type="submit"]{
+  color: #fff;
   width: 15%;
   border-radius: 50px ;
 }
-
 .box-form .right {
+  color: #753d09;
   padding: 40px;
   overflow: hidden;
   text-align: center;
+  background-color: rgba(255,252,246,255);
 }
 @media (max-width: 980px) {
   .box-form .right {
@@ -85,18 +95,78 @@ body {
 
 button, .button {
   color: #fff;
-  font-size: 16px;
-  padding: 12px 35px;
+  /* font-size: 16px; */
+  padding: 10px 25px;
   border-radius: 50px;
   display: inline-block;
   border: 0;
   outline: 0;
   cursor: pointer;
-  box-shadow: 0px 4px 20px 0px #49c628a6;
-  background-image: linear-gradient(135deg, #70F570 10%, #49C628 100%);
+  box-shadow: 0px 4px 3px 0px rgb(160, 68, 6);
+  background-image: linear-gradient(135deg, rgb(194, 90, 21) 10%, rgb(97, 42, 5) 100%);
 }
 
-.box-form .right button{
+.box-form .right .list details p button{
   display:inline-block;
   margin-right: 3px;
+}
+
+details[open] summary ~ * {
+  animation: open 0.3s ease-in-out;
+}
+
+@keyframes open {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details summary {
+  width: 100%;
+  padding: 0.5rem 0;
+  border-top: 1px solid black;
+  position: relative;
+  cursor: pointer;
+  font-size: 1.25rem;
+  font-weight: 300;
+  list-style: none;
+}
+
+details summary:after {
+  content: "+";
+  color: black;
+  position: absolute;
+  font-size: 1.75rem;
+  line-height: 0;
+  margin-top: 0.75rem;
+  right: 0;
+  font-weight: 200;
+  transform-origin: center;
+  transition: 200ms linear;
+}
+details[open] summary:after {
+  transform: rotate(45deg);
+  font-size: 2rem;
+}
+details summary {
+  outline: 0;
+}
+details p {
+  font-size: 0.95rem;
+  margin: 0 0 1rem;
+  padding-top: 1rem;
+}
+.right h1{
+  font-size: 5.4vmax;
+  line-height: 1;
+  font-weight: 500;
+  padding: 0% 25px;
+  margin: 40px 100px 20px;
+  white-space: nowrap;
 }
