--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block head%}
-<title>Birthday Wishing</title>
+<title>Sign up</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='css/signstyles.css') }}" />
 {% endblock%} {%block body%}
 <div class="box-form">
@@ -22,7 +22,6 @@
             <br>
             <input type="email" placeholder="Email">
         </div>
-        <br><br>
         <br>
         <button>Sign up</button>
     </div>
