--- a/static/css/signstyles.css
+++ b/static/css/signstyles.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&display=swap');
+*{
+  font-family: 'Dongle', sans-serif;
+  font-size: 30px;
+}
 body {
-  background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%);
+  /* background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%); */
+  background-image: url(https://previews.123rf.com/images/saenal78/saenal781503/saenal78150300020/37268712-hand-drawn-seamless-pattern-with-birthday-elements-vector-illustration.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -7,16 +13,16 @@ body {
   color: #333333;
 }
 .box-form {
-  margin: 5% auto;
-  width: 80%;
+  margin:auto;
+  width:69%;
   background: #FFFFFF;
   border-radius: 10px;
   overflow: hidden;
   display: flex;
   flex: 1 1 100%;
   align-items: stretch;
-  justify-content: space-between;
-  box-shadow: 0 0 20px 6px #090b6f85;
+  justify-content:space-between;
+  box-shadow: 0 0 20px 6px rgba(78, 36, 16, 0.719);
 }
 @media (max-width: 980px) {
   .box-form {
@@ -33,27 +39,30 @@ body {
   color: #FFFFFF;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+  /* background-image: url(https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80); */
+  background-image: linear-gradient(135deg,  #f8a830 10%, #cc5f07 100%);
   overflow: hidden;
+  text-align: center;
 }
 .box-form .left .overlay {
   padding: 2%;
   width: 100%;
   height: 100%;
-  background: #5961f9ad;
+  background: #be732bad;
   overflow: hidden;
   box-sizing: border-box;
 }
 .box-form .left .overlay h1 {
   text-align:center;
-  font-size: 6.7vmax;
+  font-size: 9vmax;
   line-height: 1;
-  font-weight: 900;
-  margin-top: 40px;
-  margin-bottom: 20px;
+  font-weight: 500;
+  padding: 5% 0%;
+  margin: 40px 50px 20px;
+  white-space: nowrap;
 }
 .box-form .left .overlay p{
-  font-size: 2vmax;
+  font-size: 35px;
   text-align: center;
 }
 .box-form .left .overlay span{
@@ -62,17 +71,20 @@ body {
   align-items: center;
 }
 .box-form .left .overlay span a {
-  background: #4285F4;
   color: #FFFFFF;
   margin-top: 10px;
   padding: 14px 50px;
   border-radius: 100px;
   display: inline-block;
-  box-shadow: 0 3px 6px 1px #16496957;
+  box-shadow: 0px 4px 3px 0px rgb(160, 68, 6);
+  background-image: linear-gradient(135deg, rgb(194, 90, 21) 10%, rgb(97, 42, 5) 100%)
 }
 .box-form .right {
-  padding: 40px;
+  color: #753d09;
+  padding: 0px 50px 40px;
   overflow: hidden;
+  text-align: center;
+  background-color: rgba(255,252,246,255);
 }
 @media (max-width: 980px) {
   .box-form .right {
@@ -80,12 +92,16 @@ body {
   }
 }
 .box-form .right h5 {
-  font-size: 3.5vmax;
+  font-size: 7vmax;
   line-height: 0;
 }
 .box-form .right p {
-  font-size: 14px;
+  font-size: 25px;
   color: #B0B3B9;
+  white-space: nowrap;
+}
+.box-form .right p a{
+  font-size: 25px;
 }
 .box-form .right .inputs {
   overflow: hidden;
@@ -94,23 +110,24 @@ body {
   width: 100%;
   padding: 0% 3% 0% 0%;
   margin-top: 25px;
-  font-size: 16px;
+  font-size: 30px;
   border: none;
   outline: none;
-  border-bottom: 2px solid #B0B3B9;
+  border-bottom: 2px solid #e6961f;
+  background-color: rgba(255,252,246,255);
+  color: #753d09;
 }
 input[data-type="password"]{
 	-webkit-text-security:circle;
 }
 .box-form .right button {
   color: #fff;
-  font-size: 16px;
-  margin: 0% 20% ;
-  padding: 12px 35px;
+  padding: 5px 25px;
   border-radius: 50px;
   display: inline-block;
   border: 0;
   outline: 0;
-  box-shadow: 0px 4px 20px 0px #49c628a6;
-  background-image: linear-gradient(135deg, #70F570 10%, #49C628 100%);
+  cursor: pointer;
+  box-shadow: 0px 4px 3px 0px rgb(160, 68, 6);
+  background-image: linear-gradient(135deg, rgb(194, 90, 21) 10%, rgb(97, 42, 5) 100%);
 }
