--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                 <div class="inputs">
                     <input type="text" placeholder="Name" name="name">
                     <br>
-                    <input type="date" name="dob" required>
+                    <input placeholder="Birth-date" type="text" onfocus="(this.type = 'date')" name="dob">
                     <br>
                     <input type="tel" placeholder="Mobile number" name="phone" required>
                     <br>
@@ -18,7 +18,6 @@
                     <br>
                     <input type="text" placeholder="Custom message" name="message">
                 </div>
-                <br>
             <input class="button" type="submit" value="Add">
             </form>
         </div>
@@ -30,11 +29,9 @@
             {%for user in users %}
             <details>
                 <summary>{{user.name}}</summary>
-                <p>{{user.email}} {{user.phone}} {{user.dob}}
-                    <div>
+                <p>{{user.email}} {{user.phone}} {{user.dob}}<br>
                     <button type="submit" form="form1" value="delete">Delete</button>
                     <button type="submit" form="form1" value="update">Update</button>
-                    </div>
                 </p>
             </details>
             {% endfor%}
