--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block head%}
-<title>Birthday Wishing App</title>
+<title>Sign in</title>
 <link rel="stylesheet" href="{{ url_for('static',filename='css/signstyles.css') }}" />
 {% endblock%} {%block body%}
 <div class="box-form">
@@ -15,13 +15,12 @@
 
     <div class="right">
         <h5>Sign in</h5>
-        <p>Don't have an account yet?<a href="signup.html">Sign up</a></p>
+        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
         <div class="inputs">
             <input type="text" placeholder="Username">
             <br>
             <input type="password" placeholder="Password">
         </div>
-        <br><br>
         <br>
         <button>Sign in</button>
     </div>
