--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
             <h1>Birthday Wisher</h1>
             <p>Never forget your near ones birthday again!</p>
             <span class="fa-brands fa-google" aria-hidden="true">
-                <a href="#"> Sign in with Google</a>
+                <a href="http://127.0.0.1:5000/login"> Sign in with Google</a>
             </span>
         </div>
     </div>
