--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,24 +5,12 @@
 <div class="box-form">
     <div class="left">
         <div class="overlay">
-            <h1>Birthday Wisher</h1>
+            <h1>BIRTHDAY WISHER</h1>
             <p>Never forget your near ones birthday again!</p>
             <span class="fa-brands fa-google" aria-hidden="true">
                 <a href="http://127.0.0.1:5000/login"> Sign in with Google</a>
             </span>
         </div>
-    </div>
-
-    <div class="right">
-        <h5>Sign in</h5>
-        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
-        <div class="inputs">
-            <input type="text" placeholder="Username">
-            <br>
-            <input type="password" placeholder="Password">
-        </div>
-        <br>
-        <button>Sign in</button>
     </div>
 </div>
 {%endblock%}
