--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,10 @@
         </div>
     </div>
     <div class="right">
+        <div class="opButton">
+        <button type="submit" form="form1" value="import" class="import">Import from Google</button>
+        <button type="submit" form="form1" value="logout" class="logout">Logout</button>
+        </div>
         <h1>Friend list</h1>
         <div class="list">
         <br>
