--- a/templates/thankyoupage.html
+++ b/templates/thankyoupage.html
@@ -4,10 +4,10 @@
 <div>
     {%if success == True%}
     <h2>User detail added!</h2>
-    <a href="/">Add more user</a>
+    <a href="/app">Add more user</a>
     {%endif%} {%if success == False%}
     <h2>Something went wrong ;(</h2>
-    <a href="/">Try Adding again.</a>
+    <a href="/app">Try Adding again.</a>
     {%endif%}
 </div>
 {%endblock%}
