--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  /* background-image: linear-gradient(135deg, #FAB2FF 10%, #1904E5 100%); */
   background-image: url(https://previews.123rf.com/images/saenal78/saenal781503/saenal78150300020/37268712-hand-drawn-seamless-pattern-with-birthday-elements-vector-illustration.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -40,7 +39,6 @@ body {
   color: #FFFFFF;
   background-size: cover;
   background-repeat: no-repeat;
-  /* background-image: url(https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80); */
   background-image: linear-gradient(135deg,  #f8a830 10%, #cc5f07 100%);
   overflow: hidden;
   text-align: center;
@@ -92,10 +90,12 @@ body {
     width: 100%;
   }
 }
-
-button, .button {
+a{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+button, .button,.import, .delete {
   color: #fff;
-  /* font-size: 16px; */
   padding: 5px 25px;
   border-radius: 40px;
   display: inline-block;
@@ -111,10 +111,23 @@ button, .button {
   margin-right: 3px;
 }
 .opButton .logout{
+  color: #fff;
+  padding: 5px 25px;
+  border-radius: 40px;
+  display: inline-block;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+  box-shadow: 0px 4px 3px 0px rgb(160, 68, 6);
+  background-image: linear-gradient(135deg, rgb(194, 90, 21) 10%, rgb(97, 42, 5) 100%);
   position: absolute;
   top: 0;
   right: 0;
   }
+
+.right h1{
+  color: #753d09 ;
+}
 
 details[open] summary ~ * {
   animation: open 0.3s ease-in-out;
