--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             <details><br>
                 <summary>{{user.name}}</summary>
                 <p>{{user.email}} {{user.phone}} {{user.dob}}<br>
-                    <div class="delete"><a href="http://127.0.0.1:5000/delete/{{user.email}}">Delete</a></div>
+                    <div class="delete"><a href="http://127.0.0.1:5000/delete/{{user.id}}">Delete</a></div>
                 </p>
             </details>
             {% endfor%}
